--- a/homework1/package.json
+++ b/homework1/package.json
@@ -14,5 +14,8 @@
     "express": "^4.14.0",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
+  },
+  "devDependencies": {
+    "mochawesome": "^1.5.2"
   }
 }
